--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = 'gradle-multi-project'
 
-include 'gradle-multi-project-core', 'gradle-multi-project-api', 'gradle-multi-project-web'
+include 'gradle-multi-project-core', 'gradle-multi-project-web'
